# DEMSimulation

./: CMakeLists.txt  Contactforce.cpp  Contactforce.h  DEMProperties.txt  Datatype.h  Engine.h  InputFile.txt  OutputFile.txt  Particle.h  README.md  Simulation.cpp  Simulation.h  Spatialgrid.cpp  Spatialgrid.h  Visualization.cpp  Visualization.h  main.cpp
examples/GranularDamper/: InputFile.txt
src/: CMakeLists.txt  DEMModel.cpp  DEMModel.h  DEMProperties.cpp  DEMProperties.h  ParallelDEMModel.cpp  ParallelDEMModel.h  ParticleProperties.cpp  ParticleProperties.h  ParticlePropertyManager.cpp  ParticlePropertyManager.h
src/BoundaryCondition/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  PlaneWall.cpp  PlaneWall.h  RectangularContainer.cpp  RectangularContainer.h  RhombusContainer.cpp  RhombusContainer.h
src/ContactDetection/: CMakeLists.txt  GridBasedContactDetection.cpp  GridBasedContactDetection.h
src/ContactForce/: CMakeLists.txt  ContactForce.cpp  ContactForce.h
src/DynamicBoundaryMover/: CMakeLists.txt  DynamicBoundaryMover.cpp  DynamicBoundaryMover.h  SpringOscillator.cpp  SpringOscillator.h
src/EventTask/: CMakeLists.txt  EventTask.cpp  EventTask.h  FreeMotionTask.cpp  FreeMotionTask.h
src/Particle/: CMakeLists.txt  Fiber.cpp  Fiber.h  Particle.cpp  Particle.h  SphereCylinderBond.cpp  SphereCylinderBond.h  SphereParticle.cpp  SphereParticle.h
src/ParticleProperties/: CMakeLists.txt  FiberProperties.cpp  FiberProperties.h  ParticleProperties.cpp  ParticleProperties.h  ParticlePropertyManager.cpp  ParticlePropertyManager.h  PlanewallProperties.cpp  PlanewallProperties.h  SphereProperties.cpp  SphereProperties.h
src/Visualization/: CMakeLists.txt  LineSphereSource.cpp  LineSphereSource.h  Visualization.cpp  Visualization.h
tests/: CMakeLists.txt  InputFile.txt  ParticlePropertiesTest.cpp  ParticleSimulationTest.cpp  SphereParticleTest.cpp  TwoSphereImpact.cpp  VisualizeGridBasedContactDetection.cpp
